v1.1.1 switch to openjdk11 LTS with depended MSSQL jar